--- a/sip-servlets-jboss5/pom.xml
+++ b/sip-servlets-jboss5/pom.xml
@@ -105,6 +105,13 @@
 			<scope>provided</scope>
 		</dependency>	
 		
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.2</version>
+			<scope>provided</scope>
+		</dependency>		
+		
 		<!-- clustering deps -->
 		<dependency>
 			<groupId>org.jboss.cache</groupId>
