--- a/sip-servlets-bootstrap/pom.xml
+++ b/sip-servlets-bootstrap/pom.xml
@@ -62,8 +62,8 @@
 	</developers>
 	<licenses>
 		<license>
-			<name>GNU LESSER GENERAL PUBLIC LICENSE</name>
-			<url>http://www.gnu.org/licenses/lgpl.html</url>
+			<name>GNU LESSER GENERAL PUBLIC LICENSE V2.1</name>
+			<url>http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
