adding new sip servlets user guide project
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@8282 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -244,7 +244,7 @@
 		<profile>			
 			<id>docs</id>
 			<modules>
-				<module>sip-servlets-docs</module>				
+				<module>docs</module>				
 			</modules>			
 		</profile>
 	</profiles>
