--- a/sip-servlets-jboss5/pom.xml
+++ b/sip-servlets-jboss5/pom.xml
@@ -324,7 +324,7 @@
 		 	            			</goals>
 		 	            			<configuration>
 									<includeArtifactIds>sip-balancer,mobicents-jain-sip-jboss5,core,cache,timers</includeArtifactIds>
-					    			<outputDirectory>${JBOSS_HOME}/server/${node}/deploy/jbossweb.sar</outputDirectory>
+					    			<outputDirectory>${env.JBOSS_HOME}/server/${node}/deploy/jbossweb.sar</outputDirectory>
 		 	            			</configuration>
 		 	          		</execution>		 	          		
 		 	        	</executions>
