Upgrading to new versions after jslee release of mobicents-cluster and jain sip ha and sip balancer
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@8555 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-jboss5/.classpath
+++ b/sip-servlets-jboss5/.classpath
@@ -167,8 +167,8 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-spec"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-jboss5-metadata"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-client"/>
-	<classpathentry kind="var" path="M2_REPO/org/mobicents/cluster/core/1.0.0BETA1-SNAPSHOT/core-1.0.0BETA1-SNAPSHOT.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/mobicents/cluster/cache/1.0.0BETA1-SNAPSHOT/cache-1.0.0BETA1-SNAPSHOT.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/mobicents/cluster/timers/1.0.0BETA1-SNAPSHOT/timers-1.0.0BETA1-SNAPSHOT.jar" sourcepath="/MOBICENTS_HOME/servers/cluster/timers/src/main/java"/>
+	<classpathentry kind="var" path="M2_REPO/org/mobicents/cluster/core/1.1-SNAPSHOT/core-1.1-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mobicents/cluster/cache/1.1-SNAPSHOT/cache-1.1-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mobicents/cluster/timers/1.1-SNAPSHOT/timers-1.1-SNAPSHOT.jar" sourcepath="/MOBICENTS_HOME/servers/cluster/timers/src/main/java"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
