changing docs subproject
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@8570 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -194,7 +194,7 @@
 				<module>sip-servlets-management</module>
 				<module>sip-servlets-examples</module>
 				<module>sip-servlets-test-suite</module>
-				<module>sip-servlets-docs</module>
+				<module>docs</module>
 			</modules>
 			<properties>
 				 <maven.test.skip>true</maven.test.skip>
