Fix to build the doco again as part of the job
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@8571 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -462,23 +462,23 @@
 	
 	<target name="build-documentation" depends="get-documentation">
 		<echo>Building documentation</echo>
-		<!-- TODO: TEMPORARY FIX FOR THE BUILD
+		
 		<exec executable="${mvn.executable}" dir="${docs.stage.dir}/media/">
 			<arg line="clean compile" />
 		</exec>
 		<exec executable="${mvn.executable}" dir="${docs.stage.dir}/sip-servlets/">
-			<arg line="clean compile" />
+			<arg line="clean install" />
 		</exec>
 		
-		<copy overwrite="true" todir="${jboss.home}/docs/mobicents-media-server">
+		<!--copy overwrite="true" todir="${jboss.home}/docs/mobicents-media-server">
 			<fileset dir="${docs.stage.dir}/media/target/docbook/publish/en-US/" />
-		</copy> -->
+		</copy-->
 		<!--copy overwrite="true" todir="${jboss.home}/docs/mobicents-sip-servlets">
 			<fileset dir="${docs.stage.dir}/sip-servlets/target/docbook/publish/en-US/" />
-		</copy--> <!--
+		</copy--> 
 		<copy overwrite="true" todir="${jboss.home}/docs/mobicents-sip-servlets">
-			<fileset dir="${base.path}/../../sip-servlets-docs/target/docbook/publish/en-US/" />
-		</copy> -->
+			<fileset dir="${base.path}/../../docs/jdocbook-mobicents/target/docbook/publish/en-US/" />
+		</copy>
 		
 		<!--delete dir="${docs.stage.dir}" /-->
 	</target>
