--- a/jopr-plugin/pom.xml
+++ b/jopr-plugin/pom.xml
@@ -1,167 +1,162 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
+    <parent>
         <artifactId>mobicents</artifactId>
         <groupId>org.mobicents</groupId>
-        <version>13-SNAPSHOT</version>
+        <version>1.14-SNAPSHOT</version>
     </parent>
-	<groupId>org.mobicents.servlet.sip</groupId>
-	<artifactId>jopr-mobicents-sip-servlets-plugin</artifactId>
-	<version>1.4-SNAPSHOT</version>
-	<packaging>jar</packaging>
+    <groupId>org.mobicents.servlet.sip</groupId>
+    <artifactId>jopr-mobicents-sip-servlets-plugin</artifactId>
+    <version>1.4-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-	<name>Jopr Mobicents Sip Servlets Plugin</name>
-	<description>A plugin for managing Mobicents Sip Servlets servers</description>
-	<repositories>
-		<repository>
-			<id>maven2-repository.dev.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2/</url>
-			<layout>default</layout>
-		</repository>
-		<repository>			
-			<id>JbossRepository</id>
-			<name>Jboss Repository</name>
-			<url>http://repository.jboss.org/maven2</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</repository>
-		<repository>
-			<id>jboss-snapshots</id>
-			<name>JBoss Snapshot Repository</name>
-			<url>http://snapshots.jboss.org/maven2</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
+    <name>Jopr Mobicents Sip Servlets Plugin</name>
+    <description>A plugin for managing Mobicents Sip Servlets servers</description>
+    <repositories>        
+        <repository>
+            <id>JbossRepository</id>
+            <name>Jboss Repository</name>
+            <url>http://repository.jboss.org/maven2</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+        <repository>
+            <id>jboss-snapshots</id>
+            <name>JBoss Snapshot Repository</name>
+            <url>http://snapshots.jboss.org/maven2</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 	
-	<properties>
-		<jopr-version>2.2.0.GA</jopr-version>
-		<rhq-version>1.2.0.GA</rhq-version>
-	</properties>
+    <properties>
+        <jopr-version>2.2.0.GA</jopr-version>
+        <rhq.version>1.2.0.GA</rhq.version>
+    </properties>
 	
-	<dependencies>
+    <dependencies>
 
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.14</version>
-			<scope>provided</scope>
-		</dependency>
+	<dependency>
+            <groupId>org.rhq</groupId>
+            <artifactId>rhq-core-parent</artifactId>
+            <version>${rhq.version}</version>
+	    <type>pom</type>
+        </dependency>   
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.14</version>
+            <scope>provided</scope>
+        </dependency>
 
 		<!-- logging dependency -->
-		<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>1.0.4</version>
-			<scope>provided</scope>
-		</dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.0.4</version>
+            <scope>provided</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>mc4j</groupId>
-			<artifactId>org-mc4j-ems</artifactId>
-			<version>1.2.5</version>
-		</dependency>
+        <dependency>
+            <groupId>mc4j</groupId>
+            <artifactId>org-mc4j-ems</artifactId>
+            <version>1.2.5</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.jboss.on</groupId>
-		   	<artifactId>jopr-jboss-as-plugin</artifactId>
-		   	<version>${jopr-version}</version>
-		</dependency>
+        <dependency>
+            <groupId>org.jboss.on</groupId>
+            <artifactId>jopr-jboss-as-plugin</artifactId>
+            <version>${jopr-version}</version>
+        </dependency>
 		
-		<dependency>
-			<groupId>org.jboss.on</groupId>
-		   	<artifactId>jopr-tomcat-plugin</artifactId>
-		   	<version>${jopr-version}</version>
-		</dependency>
+        <dependency>
+            <groupId>org.jboss.on</groupId>
+            <artifactId>jopr-tomcat-plugin</artifactId>
+            <version>${jopr-version}</version>
+        </dependency>
 		
-		<dependency>
-			<groupId>org.jetbrains</groupId>
-		   	<artifactId>annotations</artifactId>
-		   	<version>7.0.2</version>
-		</dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>7.0.2</version>
+        </dependency>                     
+
+        <dependency>
+            <groupId>org.rhq</groupId>
+            <artifactId>rhq-core-native-system</artifactId>
+            <version>${rhq.version}</version>
+            <scope>provided</scope> <!-- provided by the agent/plugin-container -->
+        </dependency>
+
+        <dependency>
+            <groupId>org.rhq</groupId>
+            <artifactId>rhq-jmx-plugin</artifactId>
+            <version>${rhq.version}</version>
+            <scope>provided</scope> <!-- provided by the agent/plugin-container -->
+        </dependency>
 
 		<dependency>
-			<groupId>org.rhq</groupId>
-			<artifactId>rhq-core-plugin-api</artifactId>
-			<version>${rhq-version}</version>
-			<scope>provided</scope> <!-- by PC -->
-		</dependency>
-		
-		<dependency>
-			<groupId>org.rhq</groupId>
-			<artifactId>rhq-core-native-system</artifactId>
-			<version>${rhq-version}</version>
-			<scope>provided</scope> <!-- by PC -->
-		</dependency>
+            <groupId>org.rhq</groupId>
+            <artifactId>rhq-core-domain</artifactId>
+            <version>${rhq.version}</version>
+            <scope>provided</scope> <!-- provided by the agent/plugin-container -->
+        </dependency>
 
 		<dependency>
-			<groupId>org.rhq</groupId>
-			<artifactId>rhq-jmx-plugin</artifactId>
-			<version>${rhq-version}</version>
-			<scope>provided</scope> <!-- by PC -->
-		</dependency>
+            <groupId>org.rhq</groupId>
+            <artifactId>rhq-core-plugin-api</artifactId>
+            <version>${rhq.version}</version>
+            <scope>provided</scope> <!-- provided by the agent/plugin-container -->
+        </dependency>
 
-		<dependency>
-			<groupId>org.rhq</groupId>
-			<artifactId>rhq-core-domain</artifactId>
-			<version>${rhq-version}</version>
-			<scope>provided</scope> <!-- by PC -->
-		</dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.rhq</groupId>
-			<artifactId>rhq-core-domain</artifactId>
-			<version>${rhq-version}</version>
-			<scope>provided</scope> <!-- by PC -->
-		</dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0</version>
+        </dependency>
 
-		<dependency>
-			<groupId>javax.persistence</groupId>
-			<artifactId>persistence-api</artifactId>
-			<version>1.0</version>
-		</dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-annotations</artifactId>
+            <version>3.3.0.ga</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-commons-annotations</artifactId>
+            <version>3.3.0.ga</version>
+        </dependency>
+    </dependencies>
 
-		<dependency>
-			<groupId>javax.persistence</groupId>
-			<artifactId>persistence-api</artifactId>
-			<version>1.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-annotations</artifactId>
-			<version>3.3.0.ga</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-commons-annotations</artifactId>
-			<version>3.3.0.ga</version>
-		</dependency>
-	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<compilerArguments>
-						<g />
-					</compilerArguments>
-					<source>1.5</source>
-					<target>1.5</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArguments>
+                        <g />
+                    </compilerArguments>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>            
+        </plugins>
+    </build>
 </project>
