Adding user guide to Tomcat distribution
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@8624 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -81,6 +81,10 @@
 			<param name="management.deploy.folder" value="${tomcat.home}/webapps" />
 		</antcall>
 		
+		<mkdir dir="${tomcat.home}/docs" />
+		<antcall target="build-documentation">
+			<param name="jboss.home" value="${tomcat.home}"/>
+		</antcall>
 		<antcall target="make-final-zip-tomcat" />
 	</target>
 	
