--- a/sip-servlets-test-suite/sipp-scenarios/clustering/lb-configuration.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/clustering/lb-configuration.properties
@@ -79,8 +79,11 @@ externalTransport=UDP
 javax.sip.STACK_NAME = SipBalancerForwarder
 javax.sip.AUTOMATIC_DIALOG_SUPPORT = off
 #You need 16 for logging traces. 32 for debug + traces.  Your code will limp at 32 but it is best for debugging.
-gov.nist.javax.sip.TRACE_LEVEL = 32
+gov.nist.javax.sip.TRACE_LEVEL = 0
 gov.nist.javax.sip.DEBUG_LOG = ./logs/sipbalancerforwarderdebug.txt
 gov.nist.javax.sip.SERVER_LOG = ./logs/sipbalancerforwarder.xml
 gov.nist.javax.sip.THREAD_POOL_SIZE = 64
 gov.nist.javax.sip.REENTRANT_LISTENER = true
+gov.nist.javax.sip.RECEIVE_UDP_BUFFER_SIZE=65536
+gov.nist.javax.sip.SEND_UDP_BUFFER_SIZE=65536
+
