using the released version of cluster, jain sip ha and sip balancer
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@8762 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-jboss5/pom.xml
+++ b/sip-servlets-jboss5/pom.xml
@@ -129,21 +129,21 @@
 		<dependency>
 			<groupId>org.mobicents.cluster</groupId>
 			<artifactId>core</artifactId>
-			<version>1.1-SNAPSHOT</version>
+			<version>1.1</version>
 			<scope>provided</scope>
 		</dependency>	
 		
 		<dependency>
 			<groupId>org.mobicents.cluster</groupId>
 			<artifactId>cache</artifactId>
-			<version>1.1-SNAPSHOT</version>
+			<version>1.1</version>
 			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.mobicents.cluster</groupId>
 			<artifactId>timers</artifactId>
-			<version>1.1-SNAPSHOT</version>
+			<version>1.1</version>
 			<scope>provided</scope>
 		</dependency>
 						
@@ -224,32 +224,32 @@
 				<dependency>
 					<groupId>org.mobicents.ha.javax.sip</groupId>
 					<artifactId>mobicents-jain-sip-ha-core</artifactId>
-					<version>0.2-SNAPSHOT</version>
+					<version>0.2</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.ha.javax.sip</groupId>
 					<artifactId>mobicents-jain-sip-jboss5</artifactId>
-					<version>0.2-SNAPSHOT</version>
+					<version>0.2</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>timers</artifactId>										
-					<version>1.1-SNAPSHOT</version>
+					<version>1.1</version>
 				</dependency>				
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>core</artifactId>										
-					<version>1.1-SNAPSHOT</version>
+					<version>1.1</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>cache</artifactId>										
-					<version>1.1-SNAPSHOT</version>
+					<version>1.1</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.tools</groupId>
 					<artifactId>sip-balancer</artifactId>
-					<version>1.0.BETA9-SNAPSHOT</version>
+					<version>1.0.BETA9</version>
 					<scope>provided</scope>
 				</dependency>
 			</dependencies>						
@@ -281,32 +281,32 @@
 				<dependency>
 					<groupId>org.mobicents.ha.javax.sip</groupId>
 					<artifactId>mobicents-jain-sip-ha-core</artifactId>
-					<version>0.1-SNAPSHOT</version>
+					<version>0.1</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.ha.javax.sip</groupId>
 					<artifactId>mobicents-jain-sip-jboss5</artifactId>
-					<version>0.1-SNAPSHOT</version>
+					<version>0.1</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>timers</artifactId>										
-					<version>1.0.0BETA1-SNAPSHOT</version>
+					<version>1.1</version>
 				</dependency>				
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>core</artifactId>										
-					<version>1.0.0BETA1-SNAPSHOT</version>
+					<version>1.1</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>cache</artifactId>										
-					<version>1.0.0BETA1-SNAPSHOT</version>
+					<version>1.1</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.tools</groupId>
 					<artifactId>sip-balancer</artifactId>
-					<version>1.0.BETA8-SNAPSHOT</version>
+					<version>1.0.BETA9</version>
 					<scope>provided</scope>
 				</dependency>
 			</dependencies>						
