--- a/jopr-plugin/pom.xml
+++ b/jopr-plugin/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>mobicents</artifactId>
         <groupId>org.mobicents</groupId>
-        <version>1.14-SNAPSHOT</version>
+        <version>1.14</version>
     </parent>
     <groupId>org.mobicents.servlet.sip</groupId>
     <artifactId>jopr-mobicents-sip-servlets-plugin</artifactId>
