--- a/mobicents-skin/pom.xml
+++ b/mobicents-skin/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
         <artifactId>mobicents</artifactId>
         <groupId>org.mobicents</groupId>
-        <version>1.14-SNAPSHOT</version>
+        <version>1.14</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 	<groupId>org.mobicents</groupId>
