[maven-release-plugin] prepare release release-1.1
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@8775 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/alerting-app/sip-servlets/pom.xml
+++ b/sip-servlets-examples/alerting-app/sip-servlets/pom.xml
@@ -3,13 +3,13 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>alerting-app-parent</artifactId>
-		<version>1.5-SNAPSHOT</version>
+		<version>1.5</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>alerting-app</artifactId>
 	<packaging>war</packaging>
-	<version>1.5-SNAPSHOT</version>
+	<version>1.5</version>
 	<name>Alerting Application</name>
 	<dependencies>	
 		<!-- media dependencies -->
