--- a/sip-servlets-examples/shootist-sip-servlet/pom.xml
+++ b/sip-servlets-examples/shootist-sip-servlet/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>sip-servlets-examples-parent</artifactId>
-		<version>1.5-SNAPSHOT</version>
+		<version>1.5</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>shootist-sip-servlet</artifactId>
