--- a/sip-servlets-test-suite/applications/subscriber-servlet/pom.xml
+++ b/sip-servlets-test-suite/applications/subscriber-servlet/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-test-suite-applications</artifactId>
-		<version>1.1-SNAPSHOT</version>
+		<version>1.1</version>
 	</parent>
 	<artifactId>subscriber-sip-servlet</artifactId>
 	<packaging>war</packaging>
