--- a/sip-servlets-examples/alerting-app/pom.xml
+++ b/sip-servlets-examples/alerting-app/pom.xml
@@ -4,13 +4,13 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>sip-servlets-examples-parent</artifactId>
-		<version>1.5</version>
+		<version>1.5-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>alerting-app-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.5</version>
+	<version>1.5-SNAPSHOT</version>
 	<name>JSLEE - SIP Servlets Alerting Application Parent</name>
 	<url>http://www.mobicents.org/mss-alerting-application.html</url>
 	<modules>				
