--- a/docs/sources-mobicents/pom.xml
+++ b/docs/sources-mobicents/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-docs</artifactId>
-		<version>1.1</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>
 	
 	<artifactId>sip-servlets-docs-sources-mobicents</artifactId>
