--- a/sip-servlets-test-suite/applications/same-instance-servlet/pom.xml
+++ b/sip-servlets-test-suite/applications/same-instance-servlet/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-test-suite-applications</artifactId>
-		<version>1.1</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>same-instance-servlet</artifactId>
 	<packaging>war</packaging>
