updating props and versions
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@8780 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/mss-sip-stack-jboss-5-all.properties
+++ b/sip-servlets-bootstrap/release/mss-sip-stack-jboss-5-all.properties
@@ -7,4 +7,8 @@ javax.sip.AUTOMATIC_DIALOG_SUPPORT=off
 gov.nist.javax.sip.DELIVER_UNSOLICITED_NOTIFY=true
 gov.nist.javax.sip.THREAD_POOL_SIZE=64
 gov.nist.javax.sip.REENTRANT_LISTENER=true
+# setting up the buffer size to reduce retransmissions and avoid loosing messages
+gov.nist.javax.sip.RECEIVE_UDP_BUFFER_SIZE=65536
+gov.nist.javax.sip.SEND_UDP_BUFFER_SIZE=65536
+#cache used by jain sip ha to replicate dialogs
 org.mobicents.ha.javax.sip.cache.MobicentsSipCache.cacheName=standard-session-cache
