--- a/jopr-plugin-as-5/pom.xml
+++ b/jopr-plugin-as-5/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>jopr-mobicents-sip-servlets-as-5-plugin</artifactId>
-	<version>1.3</version>
+	<version>1.4-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Jopr Mobicents Sip Servlets Plugin For JBoss 5</name>
@@ -236,10 +236,4 @@
  	      	</plugin>
 		</plugins>
 	</build>
-
-  <scm>
-    <connection>scm:svn:https://mobicents.googlecode.com/svn/tags/parent/jopr-mobicents-sip-servlets-as-5-plugin-1.3</connection>
-    <developerConnection>scm:svn:https://mobicents.googlecode.com/svn/tags/parent/jopr-mobicents-sip-servlets-as-5-plugin-1.3</developerConnection>
-    <url>http://mobicents.googlecode.com/svn/tags/parent/jopr-mobicents-sip-servlets-as-5-plugin-1.3</url>
-  </scm>
 </project>
