--- a/sip-servlets-pbx/pom.xml
+++ b/sip-servlets-pbx/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>mobicents</artifactId>
 		<groupId>org.mobicents</groupId>
-		<version>1.14</version>
+		<version>1.15-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.pbx</groupId>
