preparing next iteration
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@8802 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -91,7 +91,7 @@
 		<dependency>			
 			<groupId>org.mobicents.ha.javax.sip</groupId>
 			<artifactId>mobicents-jain-sip-ha-core</artifactId>
-			<version>0.2</version>	
+			<version>0.3-SNAPSHOT</version>	
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
