--- a/sip-servlets-jboss5/pom.xml
+++ b/sip-servlets-jboss5/pom.xml
@@ -129,21 +129,21 @@
 		<dependency>
 			<groupId>org.mobicents.cluster</groupId>
 			<artifactId>core</artifactId>
-			<version>1.1</version>
+			<version>1.2-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>	
 		
 		<dependency>
 			<groupId>org.mobicents.cluster</groupId>
 			<artifactId>cache</artifactId>
-			<version>1.1</version>
+			<version>1.2-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.mobicents.cluster</groupId>
 			<artifactId>timers</artifactId>
-			<version>1.1</version>
+			<version>1.2-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 						
@@ -224,32 +224,32 @@
 				<dependency>
 					<groupId>org.mobicents.ha.javax.sip</groupId>
 					<artifactId>mobicents-jain-sip-ha-core</artifactId>
-					<version>0.2</version>
+					<version>0.3-SNAPSHOT</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.ha.javax.sip</groupId>
 					<artifactId>mobicents-jain-sip-jboss5</artifactId>
-					<version>0.2</version>
+					<version>0.3-SNAPSHOT</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>timers</artifactId>										
-					<version>1.1</version>
+					<version>1.2-SNAPSHOT</version>
 				</dependency>				
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>core</artifactId>										
-					<version>1.1</version>
+					<version>1.2-SNAPSHOT</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>cache</artifactId>										
-					<version>1.1</version>
+					<version>1.2-SNAPSHOT</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.tools</groupId>
 					<artifactId>sip-balancer</artifactId>
-					<version>1.0.BETA9</version>
+					<version>1.0.BETA10-SNAPSHOT</version>
 					<scope>provided</scope>
 				</dependency>
 			</dependencies>						
@@ -281,32 +281,32 @@
 				<dependency>
 					<groupId>org.mobicents.ha.javax.sip</groupId>
 					<artifactId>mobicents-jain-sip-ha-core</artifactId>
-					<version>0.1</version>
+					<version>0.3-SNAPSHOT</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.ha.javax.sip</groupId>
 					<artifactId>mobicents-jain-sip-jboss5</artifactId>
-					<version>0.1</version>
+					<version>0.3-SNAPSHOT</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>timers</artifactId>										
-					<version>1.1</version>
+					<version>1.2-SNAPSHOT</version>
 				</dependency>				
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>core</artifactId>										
-					<version>1.1</version>
+					<version>1.2-SNAPSHOT</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>cache</artifactId>										
-					<version>1.1</version>
+					<version>1.2-SNAPSHOT</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.tools</groupId>
 					<artifactId>sip-balancer</artifactId>
-					<version>1.0.BETA9</version>
+					<version>1.0.BETA10-SNAPSHOT</version>
 					<scope>provided</scope>
 				</dependency>
 			</dependencies>						
