adding publican scripts to be able to perform the publican checks manually
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@8925 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/docs/sources-jbcp/pom.xml
+++ b/docs/sources-jbcp/pom.xml
@@ -60,6 +60,21 @@
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<executions>
+<execution>
+               <phase>install</phase>
+               <goals>
+                 <goal>run</goal>
+               </goals>
+               <configuration>
+                 <tasks>
+                   <copy file="mkbk"
+                         todir="src/main/resources/"/>
+			<copy file="Makefile"
+                         todir="src/main/resources/"/>
+                 </tasks>
+               </configuration>
+             </execution>
+
 					<execution>
 						<id>clean-resources</id>
 						<phase>clean</phase>
