--- a/sip-servlets-jboss5/pom.xml
+++ b/sip-servlets-jboss5/pom.xml
@@ -193,8 +193,41 @@
 	</build>			
 	<profiles>		
 		<profile>		
-			<id>jboss-5</id>			
-			<build>			
+			<id>jboss-5</id>
+			<dependencies>
+				<dependency>
+					<groupId>org.mobicents.ha.javax.sip</groupId>
+					<artifactId>mobicents-jain-sip-ha-core</artifactId>
+					<version>0.4-SNAPSHOT</version>
+				</dependency>
+				<dependency>
+					<groupId>org.mobicents.ha.javax.sip</groupId>
+					<artifactId>mobicents-jain-sip-jboss5</artifactId>
+					<version>0.4-SNAPSHOT</version>
+				</dependency>
+				<dependency>
+					<groupId>org.mobicents.cluster</groupId>
+					<artifactId>timers</artifactId>										
+					<version>1.2-SNAPSHOT</version>
+				</dependency>				
+				<dependency>
+					<groupId>org.mobicents.cluster</groupId>
+					<artifactId>core</artifactId>										
+					<version>1.2-SNAPSHOT</version>
+				</dependency>
+				<dependency>
+					<groupId>org.mobicents.cluster</groupId>
+					<artifactId>cache</artifactId>										
+					<version>1.2-SNAPSHOT</version>
+				</dependency>
+				<dependency>
+					<groupId>org.mobicents.tools</groupId>
+					<artifactId>sip-balancer</artifactId>
+					<version>1.0.BETA10-SNAPSHOT</version>
+					<scope>provided</scope>
+				</dependency>
+			</dependencies>				
+			<build>								
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -215,6 +248,23 @@
 							</execution>
 						</executions>
 					</plugin>
+					<plugin>
+		 	        	<groupId>org.apache.maven.plugins</groupId>
+		 	        	<artifactId>maven-dependency-plugin</artifactId>
+		 	        	<executions>		 	          		
+		 	          		<execution>
+		 	            			<id>copy-to-jboss-lib</id>
+		 	            			<phase>package</phase>
+		 	            			<goals>
+										<goal>copy-dependencies</goal>
+		 	            			</goals>
+		 	            			<configuration>
+									<includeArtifactIds>sip-balancer,mobicents-jain-sip-jboss5,core,cache,timers</includeArtifactIds>
+					    			<outputDirectory>${env.JBOSS_HOME}/server/${node}/deploy/jbossweb.sar</outputDirectory>
+		 	            			</configuration>
+		 	          		</execution>		 	          		
+		 	        	</executions>
+		 	      	</plugin>
 				</plugins>
 			</build>
 		</profile>	
@@ -333,8 +383,41 @@
 			</build>
 		</profile>					
 		<profile>		
-			<id>jboss-5-distro</id>			
-			<build>			
+			<id>jboss-5-distro</id>
+			<dependencies>
+				<dependency>
+					<groupId>org.mobicents.ha.javax.sip</groupId>
+					<artifactId>mobicents-jain-sip-ha-core</artifactId>
+					<version>0.4-SNAPSHOT</version>
+				</dependency>
+				<dependency>
+					<groupId>org.mobicents.ha.javax.sip</groupId>
+					<artifactId>mobicents-jain-sip-jboss5</artifactId>
+					<version>0.4-SNAPSHOT</version>
+				</dependency>
+				<dependency>
+					<groupId>org.mobicents.cluster</groupId>
+					<artifactId>timers</artifactId>										
+					<version>1.2-SNAPSHOT</version>
+				</dependency>				
+				<dependency>
+					<groupId>org.mobicents.cluster</groupId>
+					<artifactId>core</artifactId>										
+					<version>1.2-SNAPSHOT</version>
+				</dependency>
+				<dependency>
+					<groupId>org.mobicents.cluster</groupId>
+					<artifactId>cache</artifactId>										
+					<version>1.2-SNAPSHOT</version>
+				</dependency>
+				<dependency>
+					<groupId>org.mobicents.tools</groupId>
+					<artifactId>sip-balancer</artifactId>
+					<version>1.0.BETA10-SNAPSHOT</version>
+					<scope>provided</scope>
+				</dependency>
+			</dependencies>				
+			<build>							
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -355,6 +438,23 @@
 							</execution>
 						</executions>
 					</plugin>
+					<plugin>
+		 	        	<groupId>org.apache.maven.plugins</groupId>
+		 	        	<artifactId>maven-dependency-plugin</artifactId>
+		 	        	<executions>		 	          		
+		 	          		<execution>
+		 	            			<id>copy-to-jboss-lib</id>
+		 	            			<phase>package</phase>
+		 	            			<goals>
+										<goal>copy-dependencies</goal>
+		 	            			</goals>
+		 	            			<configuration>
+									<includeArtifactIds>sip-balancer,mobicents-jain-sip-jboss5,core,cache,timers</includeArtifactIds>
+					    			<outputDirectory>${env.JBOSS_HOME}/server/${node}/deploy/jbossweb.sar</outputDirectory>
+		 	            			</configuration>
+		 	          		</execution>		 	          		
+		 	        	</executions>
+		 	      	</plugin>
 				</plugins>
 			</build>
 		</profile>
