--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -219,7 +219,7 @@
 	<target name="release-jboss-5-node">
 		<mkdir dir="${jboss-5.home}/server/${jboss.config}/conf/dars" />
 		<copy file="${base.path}/../src/site/resources/click2call-dar.properties" overwrite="true" tofile="${jboss-5.home}/server/${jboss.config}/conf/dars/mobicents-dar.properties" />
-		<copy file="${base.path}/mss-sip-stack-jboss.properties" overwrite="true" tofile="${jboss-5.home}/server/${jboss.config}/conf/mss-sip-stack.properties" />
+		<copy file="${base.path}/mss-sip-stack-jboss-5.properties" overwrite="true" tofile="${jboss-5.home}/server/${jboss.config}/conf/mss-sip-stack.properties" />
 		<copy file="${base.path}/server-jboss-5.xml" overwrite="true" tofile="${jboss-5.home}/server/${jboss.config}/deploy/jbossweb.sar/server.xml" />		
 		<copy file="${base.path}/jboss-beans.xml" overwrite="true" tofile="${jboss-5.home}/server/${jboss.config}/deploy/jbossweb.sar/META-INF/jboss-beans.xml" />
 		<copy file="${base.path}/metadata-deployer-jboss-beans.xml" overwrite="true" tofile="${jboss-5.home}/server/${jboss.config}/deployers/metadata-deployer-jboss-beans.xml" />
