--- a/pom.xml
+++ b/pom.xml
@@ -189,12 +189,17 @@
 			<id>release</id>
 			<modules>
 				<module>sip-servlets-tomcat-jboss4</module>
-				<module>sip-servlets-jboss5-metadata</module>	
+				<module>sip-servlets-jboss5-metadata</module>
+				<module>sip-servlets-jruby</module>
+				<module>sip-servlets-jboss5-deployer</module>
+				<module>sip-servlets-jboss5-ha-server-cache</module>
 				<module>sip-servlets-jboss5</module>			
 				<module>sip-servlets-management</module>
 				<module>sip-servlets-examples</module>
 				<module>sip-servlets-test-suite</module>
 				<module>docs</module>
+				<module>jopr-plugin</module>
+				<module>jopr-plugin-as-5</module>
 			</modules>
 			<properties>
 				 <maven.test.skip>true</maven.test.skip>
@@ -218,7 +223,10 @@
 		<profile>			
 			<id>jboss-5</id>
 			<modules>		
-				<module>sip-servlets-jboss5-metadata</module>		
+				<module>sip-servlets-jboss5-metadata</module>	
+				<module>sip-servlets-jboss5-deployer</module>	
+				<module>sip-servlets-jruby</module>
+				<module>sip-servlets-jboss5-ha-server-cache</module>
 				<module>sip-servlets-jboss5</module>				
 			</modules>			
 		</profile>
@@ -237,7 +245,10 @@
 		<profile>			
 			<id>jboss-5-distro</id>
 			<modules>
-				<module>sip-servlets-jboss5-metadata</module>				
+				<module>sip-servlets-jboss5-metadata</module>	
+				<module>sip-servlets-jboss5-deployer</module>	
+				<module>sip-servlets-jruby</module>		
+				<module>sip-servlets-jboss5-ha-server-cache</module>
 				<module>sip-servlets-jboss5</module>				
 			</modules>			
 		</profile>
